# LLanguage

./: .gitmodules  Makefile  README.md  build.sh  clean.sh  index.html
Common/: DebugUtil.cpp  DebugUtil.hpp  MapFindKeyByValue.hpp  commonutil.hpp  stdstringext.hpp
OsInfoAddin/: Clipboard.cpp  Clipboard.h  Makefile  OsInfoAddin.cpp  OsInfoAddin.h  OsInfoAddin.vcxproj  OsInfoAddin.vcxproj.filters  OsinfoAddin.def  PipeUtil.cpp  PipeUtil.h  ReadMe.txt  ScpClipboardObject.cpp  ScpClipboardObject.h  ScpComputerObject.cpp  ScpComputerObject.h  ScpGpioObject.cpp  ScpGpioObject.h  ScpOsInfoObject.cpp  ScpOsInfoObject.h  ScpPipeObject.cpp  ScpPipeObject.h  ScpProcObject.cpp  ScpProcObject.h  ScpShareMemoryObject.cpp  ScpShareMemoryObject.h  ScpThreadObject.cpp  ScpThreadObject.h  ScpTimerObject.cpp  (+5 more)
ScriptEngineLib/: CMakeLists.txt  Cross.cpp  Cross.h  Makefile  NumberHelp.cpp  NumberHelp.h  ScpArrayObject.cpp  ScpArrayObject.h  ScpAst.cpp  ScpAst.h  ScpBigIntObject.cpp  ScpBigIntObject.h  ScpByteCode.cpp  ScpByteCode.h  ScpCFunctionObject.cpp  ScpCFunctionObject.h  ScpCObject.cpp  ScpCObject.h  ScpClassInstanceObject.cpp  ScpClassInstanceObject.h  ScpClassObject.cpp  ScpClassObject.h  ScpCommonObject.h  ScpDebugger.h  ScpDirectoryObject.cpp  ScpDirectoryObject.h  ScpDoubleObject.cpp  ScpDoubleObject.h  ScpErrorCode_uni.h  ScpExpressionAnalyser.cpp  ScpExpressionAnalyser.h  ScpExpressionBlock.cpp  ScpExpressionBlock.h  ScpExpressionsObject.cpp  ScpExpressionsObject.h  ScpExtendObjectMgr.cpp  ScpExtendObjectMgr.h  ScpFileObject.cpp  ScpFileObject.h  ScpFunctionObject.cpp  (+94 more)
(+80 files in other folders)
